# Qronk

./: README.md  init.bash
Arduino/ProgramEprom/: ProgramEprom.ino
Arduino/WritePos/: WritePos.ino
ST3215 Servo Test Code/WritePos/: WritePos.ino
documents/: dependencies.md  nomachine.md  setup.md  ubuntu_mac.md  ubuntu_windows.md
four_bar_tests/: .gitignore  README.md
four_bar_tests/src/: CMakeLists.txt  package.xml
four_bar_tests/src/launch/: display.launch.xml
four_bar_tests/src/meshes/: Inner_Mid_Leg_v8_1.stl  Lower_Leg_v18_1.stl  Outer_Mid_Leg_v5_1.stl  Outer_Upper_Leg_v4_1.stl  base_link.stl
four_bar_tests/src/meshes/4-bar/: Bar-0.stl  Bar-1.stl  Bar-2.stl
four_bar_tests/src/rviz/: urdf.rviz
four_bar_tests/src/urdf/: 4bar.urdf  leg_assembly_2.trans  leg_assembly_2.xacro  materials.xacro
qronk_description/: CMakeLists.txt  package.xml
qronk_description/gazebo/: empty.sdf  sample.yaml
qronk_description/launch/: display.launch.py  display.launch.xml  gazebo.launch.py
qronk_description/meshes/: INNER_BAR_v4_1.stl  LONG_DRIVER_v2_1.stl  OUTPUT_LINK_FLIPPED_v5_1.stl  SHORT_DRIVER_v3_1.stl  base_link.stl
qronk_description/rviz/: qronk_config.rviz
qronk_description/urdf/: leg.xacro  materials.xacro  new_leg.trans  new_leg.xacro  qronk.gazebo.xacro  qronk.ros2_control.xacro  qronk.urdf.xacro  qronk.xacro
qronk_motors/launch/: leg_test_launch.xml
qronk_motors/qronk_motors/: servoHome.py  state2servo.py  state2servoTest.py
