<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>four_bar_tests</name>
  <version>0.1.0</version>
  <description>4 Bar Linkage testing - URDF and ROS2 Control</description>

  <license>BSD</license>
  <maintainer email="63052069+16cra40@users.noreply.github.com">16cra40</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>
</package>
